syntax = "proto3";

option go_package = "proto";

import "operation.proto";

message SumRequest {
  double number1 = 1;
  double number2 = 2;
}

message SumResponse {
  double result = 1;
}

message MultiplicationRequest {
  double number1 = 1;
  double number2 = 2;
}

message MultiplicationResponse {
  double result = 1;
}

message DivisionRequest {
  double number1 = 1;
  double number2 = 2;
}

message DivisionResponse {
  double result = 1;
}

message SubtractionRequest {
  double number1 = 1;
  double number2 = 2;
}

message SubtractionResponse {
  double result = 1;
}

message FindByIdRequest {
  string id = 1;
}

message FindByIdResponse {
  Operation operation = 1;
}

message FindByOpRequest {
  enumOp op = 1;
}

message FindByOpResponse {
  repeated Operation operations = 1;
}

message ListAllRequest {}

message ListAllResponse {
  repeated Operation operations = 1;
}

service OperationService {
  rpc Sum(SumRequest) returns (SumResponse);
  rpc Multiplication(MultiplicationRequest) returns (MultiplicationResponse);
  rpc Division(DivisionRequest) returns (DivisionResponse);
  rpc Subtraction(SubtractionRequest) returns (SubtractionResponse);
  rpc FindById(FindByIdRequest) returns (FindByIdResponse);
  rpc FindByOp(FindByOpRequest) returns (FindByOpResponse);
  rpc ListAll(ListAllRequest) returns (ListAllResponse);
}